--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <% if user_signed_in? %>
+      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <%= render "layouts/profile"%>
+    <%else%>
+      <%= link_to "login", new_user_session_path %>
+    <%end%>
+      <%= yield %>
+      <%
+=begin%>
+ <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<%
+=end%>
   </body>
 </html>
