--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,6 +4,11 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :avatar %><br />
+    <%= f.file_field :avatar%>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -16,6 +21,8 @@
   Country:- <%=f.collection_select :country_id, Country.all, :id, :name%><br><br>
   State:- <%=f.collection_select :state_id, State.all, :id, :name%><br><br>
   City:- <%=f.collection_select :city_id, City.all, :id, :name%><br><br>
+
+  Gender:- <%=f.select :gender, [['Male', 'male'], ['Female', 'female']]%><br><br>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
