--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -20,6 +20,10 @@
     <%=f.text_field :description, placeholder: "description", class: "form-control"%>
   </div>
 
+  <div class= "form-group">
+    <%= f.file_field :images, multiple: true %>
+  </div>
+
   <%=f.hidden_field :user_id, value: current_user.id%>
 
   <div class= "form-group">
