--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
           <td><%=post.description%></td>
           <td><%=post.user.email%></td>
           <td><%=link_to "Edit", edit_post_path(post), class: "btn .btn-info"%></td>
-          <td><%=link_to "add comments", edit_post_path(post), class: "btn .btn-info"%></td>
+          <td><%=link_to "add comments", new_comment_path(:post_id => post.id), class: "btn .btn-info"%></td>
           <td><%= link_to 'Destroy', post_path(post),
             data: {:confirm => 'Are you sure?'}, :method => :delete %></td>
         </tr>
