added multiple select tag list

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,8 +24,11 @@
     <%= f.file_field :images, multiple: true %>
   </div>
 
-  <%=f.hidden_field :user_id, value: current_user.id%>
+  <div class= "form-group">
+    <%= f.collection_select(:tag_ids, Tag.all, :id, :name, {},  multiple: true) %>
+  </div>
 
+  <%=f.hidden_field :user_id, value: current_user.id%>
   <div class= "form-group">
     <%=f.submit class: "btn btn-primary"%>
     <%=link_to "Back", posts_path, class: "btn btn-secondary"%>
