--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <table class="table table-hover">
-  <thead>
+  <thead style='border: 1px solid #900'>
     <tr>
-      <th>#ID</th>
       <th>Title</th>
       <th>Description</th>
       <th>User</th>
@@ -10,14 +9,13 @@
     <tbody>
       <%@posts.each do |post|%>
         <tr>
-          <td><%=post.id%></td>
           <h2><%= post.title %></h2>
             <p>Tags: <%= raw post.tags.map(&:name).map { |t| link_to t }.join(', ') %></p>
-          <td><%=post.description%></td>
-          <td><%=post.user.email%></td>
-          <td><%=link_to "Edit", edit_post_path(post), class: "btn .btn-info"%></td>
-          <td><%=link_to "add comments", new_comment_path(:post_id => post.id), class: "btn .btn-info"%></td>
-          <td><%= link_to 'Destroy', post_path(post), data: {:confirm => 'Are you sure?'}, :method => :delete %></td>
+            <p>Description:- <%=post.description%></p>
+            <p>User:- <%=post.user.email%></p>
+            Action:- <%=link_to "Edit", edit_post_path(post), class: "btn .btn-info"%>
+              &nbsp;&nbsp;<%=link_to "add comments", new_comment_path(:post_id => post.id), class: "btn .btn-info"%>
+              &nbsp;&nbsp;<%= link_to 'Destroy', post_path(post), data: {:confirm => 'Are you sure?'}, :method => :delete %></h5>
         </tr>
       <%end%>
     </tbody>
