--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
@@ -18,5 +19,6 @@
       <%= link_to "login", new_user_session_path %>
     <%end%>
     <%= yield %>
+      <%= link_to "login", new_user_session_path %>
   </body>
 </html>
